; ModuleID = '/home/carl/AnghaBench/micropython/ports/cc3200/hal/extr_prcm.c_PRCMOCRRegisterWrite.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/cc3200/hal/extr_prcm.c_PRCMOCRRegisterWrite.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HIB3P3_BASE = common dso_local global i64 0, align 8
@HIB3P3_O_MEM_HIB_REG2 = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @PRCMOCRRegisterWrite(i8 zeroext %0, i64 %1) #0 {
  %3 = alloca i8, align 1
  %4 = alloca i64, align 8
  store i8 %0, i8* %3, align 1
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* @HIB3P3_BASE, align 8
  %6 = load i64, i64* @HIB3P3_O_MEM_HIB_REG2, align 8
  %7 = add nsw i64 %5, %6
  %8 = load i8, i8* %3, align 1
  %9 = zext i8 %8 to i32
  %10 = shl i32 %9, 2
  %11 = sext i32 %10 to i64
  %12 = add nsw i64 %7, %11
  %13 = load i64, i64* %4, align 8
  %14 = call i32 @MAP_PRCMHIBRegWrite(i64 %12, i64 %13)
  ret void
}

declare dso_local i32 @MAP_PRCMHIBRegWrite(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
